--- a/app.css
+++ b/app.css
@@ -3,6 +3,8 @@ body {
 	background: #ededef;
 	/* font-family: 'Raleway', sans-serif; */
 	font-family: 'Amaranth', sans-serif;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 content {
 	margin-top: 100px;
