--- a/V 2.0/app.css
+++ b/V 2.0/app.css
@@ -60,22 +60,14 @@ content {
 }
 
 /* TOP SECTION  --------------------------------- */
-div #head-sec {
-	padding: 0px 20px;
-	margin: 50px 0px 0px 0px;
-	/* background: bottom/cover no-repeat url("img/desk.jfif"); */
-	border-top: 1px solid #d4d4d4;
-	/* border-bottom: 1px solid #d4d4d4; */
-}
 div #top-sec {
-	padding: 0px 20px;
-	margin: 50px 0px 75px 0px;
-	/* background: bottom/cover no-repeat url("img/desk.jfif"); */
-	/* border-top: 1px solid #d4d4d4; */
-	/* border-bottom: 1px solid #d4d4d4; */
+	padding: 0px 50px 400px 50px;
+	margin: 0px 0px 20px 0px;
+	background: bottom/cover no-repeat url("img/desk.jfif");
+	border-bottom: 1px solid #d4d4d4;
 }
 div #top-text {
-	/* margin-top: 20px; */
+	margin-top: 80px;
 	padding: 20px;
 	font-size: 1.5rem;
 	font-weight: 500;
@@ -98,18 +90,14 @@ h2.sec-header {
 	font-weight: 700;
 	line-height: 1.5;
 	color: #36a696;
-	border-top: 1px solid #d4d4d4;
 	border-bottom: 1px solid #d4d4d4;
-	margin: 50px 0px 25px 0px;
+	margin: 150px 0px 25px 0px;
 	transition: 0.75s;
 }
 h2.sec-header:hover {
 	letter-spacing: 15px;
 	font-weight: 900;
 	color: #ffb24e;
-}
-iframe {
-	border-radius: 20px;
 }
 
 /* SERVICES SECTIONS --------------------------------- */
@@ -123,12 +111,12 @@ iframe {
 	text-align: center;
 	list-style-type: none;
 	padding-inline-start: 0px;
-	transition: letter-spacing 0.5s;
+	transition: letter-spacing 2s;
 	margin-top: 10px;
 	color: #333;
 }
 .serv-info li:hover {
-	letter-spacing: 2px;
+	letter-spacing: 5px;
 	font-weight: 700;
 	/* color: #ffb24e; */
 }
@@ -159,12 +147,10 @@ iframe {
 div #vpd {
 	background: center/cover no-repeat url("img/journey-ls.jpg");
 	border-bottom: 20px solid #ededef;
-	margin-bottom: 75px;
 }
 div #sml {
 	background: center/cover no-repeat url("img/play-disc-ls.jpg");
 	border-bottom: 20px solid #ededef;
-	margin-bottom: 75px;
 }
 
 /* SUB SECTIONS --------------------------------- */
@@ -228,11 +214,9 @@ iframe {
 }
 
 /* SCHEDULE A CALL WITH US --------------------------------- */
-div#call {
-	margin: 1rem 0rem 5rem 0rem;
-}
+div#call,
 div#message {
-	margin: 0rem 0rem 5rem 0rem;
+	margin: 1rem 0rem 8rem 0rem;
 }
 .sub-sec#call button {
 	background-color: #36a696;
@@ -251,14 +235,14 @@ h3.contact {
 	font-size: 1.5rem;
 	font-weight: 400;
 	line-height: 1.5;
-	margin-bottom: 0px;
+	/* margin-bottom: 20px; */
 	text-align: center;
 }
 
 /* INFORMATION SECTION --------------------------------- */
 .info-icon {
 	font-size: 40px;
-	margin: 0px 15px 75px 15px;
+	margin: 0px 15px 15px;
 }
 .info-icon .fab {
 	margin: 25px 25px 25px;
@@ -315,8 +299,12 @@ h2#dch {
 #mc_embed_signup .clear .button:hover {
 	background-color: #ffb24e;
 }
-@media (max-width: 720px) {
-    div #top-text  {
-	font-size: 1rem;
+/* @media (max-width: 1200px) {
+    #headingGroup h1 {
+        font-weight: 100;
+        font-size: 3rem;
     }
-}
+    .blurb h2 {
+        font-size: 2rem;
+    }
+} */
