--- a/app.css
+++ b/app.css
@@ -12,9 +12,10 @@ content {
 }
 .container-fluid {
 	padding: 0px;
+	margin-bottom: 100px;
 }
 .container-fluid.sample {
-	margin: 100px 0px 10px 0px;
+	margin: 0px 0px 10px 0px;
 }
 .container-fluid .sec-title {
 	font-size: 1.5rem;
@@ -100,7 +101,7 @@ h2.sec-header {
 	color: #36a696;
 	border-top: 1px solid #d4d4d4;
 	border-bottom: 1px solid #d4d4d4;
-	margin: 50px 0px 25px 0px;
+	margin: 50px 0px 50px 0px;
 	transition: 0.75s;
 }
 h2.sec-header:hover {
