--- a/app.css
+++ b/app.css
@@ -169,9 +169,9 @@ div #sml {
 }
 
 /* SUB SECTIONS --------------------------------- */
-.sub-sec {
-	/* margin: 2rem; */
-}
+/* .sub-sec {
+	margin: 2rem;
+} */
 .sub-sec h2 {
 	font-size: 1.5rem;
 }
@@ -320,4 +320,24 @@ h2#dch {
     div #top-text  {
 	font-size: 1rem;
     }
+}
+
+/* SLOW TRANSITION */
+.reveal{
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: all 2s ease;
+}
+.reveal.active{
+  transform: translateY(0px);
+  opacity: 1;
+}
+.revealStill{
+  position: relative;
+  opacity: 0;
+  transition: all 2s ease;
+}
+.revealStill.active{
+  opacity: 1;
 }
