--- a/app.css
+++ b/app.css
@@ -1,9 +1,9 @@
 /* MAIN PAGE THEME --------------------------------- */
-body {
+* {
 	background: #ededef;
-	/* font-family: 'Raleway', sans-serif; */
 	font-family: 'Amaranth', sans-serif;
-	overflow-x: hidden;
+	max-width: 100%;
+	overflow-x: hidden!important;
 	overflow-y: scroll;
 }
 content {
