--- a/app.css
+++ b/app.css
@@ -291,7 +291,7 @@ h2#dch {
 	margin: 0px 25px;
 }
 #mc_embed_signup form {
-	background-color: #ededef;
+	background-color: #ffffff;
 	padding: 10px;
 	font-family: 'Raleway', sans-serif;
 }
